--- a/Portifolio/Site  About me/styles/main.css
+++ b/Portifolio/Site  About me/styles/main.css
@@ -7,7 +7,11 @@ Date last modified: v1
 body {
     background-color: #fef9ff;	
     font-family: arial, helvetica, sans-serif;
-    color: #0d1f2d
+    color: #0d1f2d;
+    max-width: 900px;
+    margin: 0 auto;
+ 
+
 }
 
 header, footer {
@@ -79,3 +83,46 @@ textarea {
     background-color: #fff;
     resize: none;
 }
+
+.clear-float {
+    clear:both;
+}
+
+article img {
+   float:left;
+}
+
+.right-content {
+    float:left;
+}
+
+article {
+    margin-bottom: 16px;
+}
+
+nav a {
+    background-color: #5b7d87;
+    color: #fef9ff;
+    padding: 8px;
+    border: thin solid #0d1f2d;
+    text-decoration: none;
+    text-align: center;
+    display: block;
+	margin: 20px;
+	width: 100px;
+	float: left;
+}
+
+nav a:visited {
+    color: #e4c3ad; 
+}
+
+nav a:hover {
+    background-color: #fef9ff;
+    color: #5b7d87; 
+}
+
+nav a:active {
+    font-weight: bold;
+}
+
