--- a/Portifolio/Restaurant Site Parte2/restaurantStyles.css
+++ b/Portifolio/Restaurant Site Parte2/restaurantStyles.css
@@ -8,12 +8,19 @@ Date last modified: v1
 header, footer {
     font-family: Garamond, serif;
     background-color: #e6f3ff;
-    color: #fef9ff;
+    color: #b38600;
     height: 100px;
     text-align: center;
 	padding: 30px 10px 20px 10px;
  }
 
+footer{
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+}
 
 /*table {
     text-align:center; 
@@ -24,4 +31,37 @@ header, footer {
 
 form {
     font-weight: bold;
+}
+
+nav a:visited {
+    color: #b38600; 
+}
+
+nav a:hover {
+    font-weight: bold;
+    
+}
+
+nav a:active {
+   text-decoration: none;
+}
+
+table.tbl {
+    font-family: Garamond, serif;
+    border-color: #f2f2f2;
+    border-collapse: collapse; 
+    width: 50%; 
+    margin: auto; 
+}
+
+tbody.tbl  tr:nth-child(even) {
+  background-color: #d9d9d9;
+}
+
+tbody.tbl  tr:nth-child(odd) {
+  background-color: #f2f2f2;
+}
+
+th, td{
+    padding: 15px;
 }
